force-app/main/default/objects/echosign_dev1__Agreement_Access__c/echosign_dev1__Agreement_Access__c.object-meta.xml
<CustomObject>
    <label>Agreement Access</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Agreement Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Access</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>