force-app/main/default/objects/echosign_dev1__Agreement_Access__c/fields/echosign_dev1__Expiration__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Expiration__c</fullName>
    <label>Expiration</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>