force-app/main/default/objects/echosign_dev1__Agreement_Access__c/fields/echosign_dev1__Token__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Token__c</fullName>
    <label>Token</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>