force-app/main/default/objects/echosign_dev1__Agreement_Access__c/fields/echosign_dev1__User_Id__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__User_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>